# plato

./: .gitignore  BACKLOG.md  Dockerfile  IDEA.md  Makefile  PROMPT.md  README.md  config.yaml  desc.md  docker-compose.yml  docs.md  idea.md  main.py  pyproject.toml  requirements.txt  test_config.py  test_graph.py  test_llm.py
contexter/: config.py  core.py  llm.py  parser.py  patch.py  store.py
docs/: PROMPT.md  REFACTORING_GUIDE.md  desc.md  docs.md  mascot.md  ollama_client_refactored.py  tui_integration_example.py
src/: context.md
src/plato/: cli.py  config.py  core.py  graph.py  graph_rag.py  llm.py  main.py  parser.py  queue.py  visualize.py
src/plato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/plato/agents/: ascii_art.py  base.py  builder.py  chat.py  scanner.py  suggester.py
src/plato/core/: errors.py  models.yaml  pdf.py  retriever.py  template.py
src/plato/models/: document.py
src/plato/ollama/: client.py
src/plato/templates/: insights.j2  security_audit.j2  summarize.j2
src/plato/templates/schemas/: security_audit.json  summary.json
src/plato/tui/: app.css  app.py  sidebar.py
src/plato/tui/screens/: folder_select.py  main.py
src/plato/tui/widgets/: mascot.py  picker.py  results.py  status.py
test_vectors/: default_metadata.json  default_vectors.npy
tests/: patch_test.py  reproduce_action_failure.py  test_config.py  test_core.py  test_graph.py  test_graph_rag.py  test_llm.py  test_native_retriever.py  test_numpy_thread.py  test_ollama_new.py  test_parser.py  test_pydantic_compat.py  test_store.py
