[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "plato"
version = "0.1.0"
authors = [
  { name="Darleison Filho" },
]
description = "Local-first PDF to Knowledge Graph & Semantic Search Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "pymupdf>=1.23.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "rich>=13.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2",
    "jsonschema>=4.0.0",
    "tenacity>=8.0.0",
    # Optional: DeepSeek-OCR integration helper if available, or just use generic request
]

[project.scripts]
plato = "plato.main:app"
